[gd_scene load_steps=3 format=3 uid="uid://cwrksoq33lk84"]

[ext_resource type="PackedScene" uid="uid://dyolmx8qetgq7" path="res://Scenes/UI/on_screen_equipment_slot.tscn" id="1_8pehr"]
[ext_resource type="Script" path="res://Scripts/on_screen_ui.gd" id="1_pexjr"]

[node name="OnScreenUI" type="CanvasLayer"]
script = ExtResource("1_pexjr")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="ToolSlot" parent="MarginContainer/HBoxContainer" instance=ExtResource("1_8pehr")]
unique_name_in_owner = true
layout_mode = 2
slot_name = "Tool"

[node name="MaterialSlot" parent="MarginContainer/HBoxContainer" instance=ExtResource("1_8pehr")]
unique_name_in_owner = true
layout_mode = 2
slot_name = "Material"
